--- a/wp-content/themes/uranai-lala/page-charge.css
+++ b/wp-content/themes/uranai-lala/page-charge.css
@@ -11,6 +11,8 @@ ul, li { list-style: none; }
 
 button { appearance: none; border: none; background: inherit; font-size: 100%; font-family: inherit; color: inherit; }
 
+h1, h2, h3 { text-align: center; }
+
 body { 
     color: #707070;
     font-family:
@@ -25,12 +27,12 @@ body {
 /* ================================================== */
 
 /* container */
-.uranai__container {
+.charge__container {
     width: 100%;
 }
 
 /* header */
-.uranai__global-header {
+.charge__global-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -44,165 +46,108 @@ body {
     z-index: 2;
 }
 
-.uranai__global-logo {
+.charge__global-logo {
     display: inline;
     font-size: 0;
     width: 124px;
 }
 
-.uranai__global-navi {
+.charge__global-navi {
     width: 80px;
     height: 80px;
     background-color: #ccc;
 }
 
 /* content */
-.uranai__content {
+.charge__content {
     font-size: 14px;
     width: 100%;
     padding: 96px 16px 0 16px;
 }
 
 /* first view */
-.uranai__first-view {
+.charge__first-view {
     width: 100%;
     font-size: 0;
     margin-bottom: 64px;
 }
 
-.uranai__first-view > img {
+.charge__first-view > img {
     border-radius: 10px;
 }
 
-/* uranai__section */
-.uranai__section {
+/* charge__section */
+.charge__section {
     width: 100%;
     margin-bottom: 128px;
 }
 
-.uranai__section > .uranai__row {
+.charge__section > .charge__row {
     width: 100%;
     margin-bottom: 64px;
 }
 
-.uranai__section > .uranai__row:last-of-type {
+.charge__section > .charge__row:last-of-type {
     margin-bottom: 0px;
 }
 
-.uranai__section > .uranai__row  > h2 {
-    text-align: center;
-}
-
-.uranai__section > .uranai__row > p {
+.charge__section > .charge__row > p {
     font-size: 14px;
     margin-bottom: 16px;
 }
 
-.uranai__section > .uranai__row > p:last-of-type {
+.charge__section > .charge__row > p:last-of-type {
     margin-bottom: 0;
 }
 
-/* .uranai__uranai */
-.uranai__uranai {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 64px;
+.charge__section > .charge__row > h3 {
+    margin-bottom: 32px;
 }
 
-.uranai__uranai-item {
-    display: block;
-    width: 98px;
-    margin: 64px auto;
-}
-
-/* .uranai__link */
-.uranai__link {
-    display: inline-flex;
-    align-items: center;
-    margin: 0 auto;
-    padding: 8px 16px;
-    cursor: pointer;
-    border-bottom: 1px solid #707070;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.uranai__link-icon {
-    display: inline-block;
-    width: 20px;
-    margin-right: 16px;
-}
-
-.uranai__table {
+/* .charge__table */
+.charge__table {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
 }
 
-.uranai__table > dt, .uranai__table > dd {
-    margin-bottom: 32px;
-}
-
-.uranai__table > dt {
-    width: 8em;
-
-}
-
-.uranai__table > dd{
-    width: calc(100% - 8em);
-}
-
-
-/* uranai__contact-btn */
-.uranai__contact-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+.charge__table > dt, .charge__table > dd {
+    width: 50%;
+    text-align: center;
     padding: 16px;
-    background: #FAEDE7;
-    border: 3px solid #535150;
-    transition: background-color .3s;
-    cursor: pointer;
+    border-top: 1px solid #ccc;
 }
 
-.uranai__contact-btn:hover {
-    background: #EDDBD3;
-}
-
-.uranai__contact-icon{
-    display: inline-block;
-    width: 24px;
-    margin-right: 16px;
+.charge__table > dt:last-of-type, .charge__table > dd:last-of-type {
+    border-bottom: 1px solid #ccc;
 }
 
 /* footer */
-.uranai__fotter {
+.charge__fotter {
     width: 100%;
     padding: 64px 16px;
     border-top: 1px solid #ccc;
     font-size: 12px;
 }
 
-.uranai__fotter-navi {
+.charge__fotter-navi {
     width: 100%;
     margin-bottom: 64px;
 }
 
-.uranai__fotter-navi > ul {
+.charge__fotter-navi > ul {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
 }
 
-.uranai__fotter-navi > ul > li {
+.charge__fotter-navi > ul > li {
     display: inline-block;
     width: 50%;
     margin-bottom: 16px;
 }
 
-.uranai__fotter-row {
+.charge__fotter-row {
     width: 100%;
     display: flex;
     align-items: center;
@@ -210,26 +155,26 @@ body {
     margin-bottom: 64px;
 }
 
-.uranai__fotter-logo {
+.charge__fotter-logo {
     display: inline-block;
     font-size: 0;
     width: 74.29px;
     border: 1px solid #ccc;
 }
 
-.uranai__fotter-sns {
+.charge__fotter-sns {
     display: flex;
 }
 
-.uranai__fotter-sns-item {
+.charge__fotter-sns-item {
     font-size: 0;
     width: 40px;
 }
 
-.uranai__fotter-sns-item {
+.charge__fotter-sns-item {
     margin-right: 16px;
 }
 
-.uranai__fotter-sns-item:last-of-type {
+.charge__fotter-sns-item:last-of-type {
     margin-right: 0;
 }
