--- a/wp-content/themes/uranai-lala/page-request.css
+++ b/wp-content/themes/uranai-lala/page-request.css
@@ -31,12 +31,12 @@ body {
 /* ================================================== */
 
 /* container */
-.uranai__container {
+.request__container {
     width: 100%;
 }
 
 /* header */
-.uranai__global-header {
+.request__global-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -50,177 +50,126 @@ body {
     z-index: 2;
 }
 
-.uranai__global-logo {
+.request__global-logo {
     display: inline;
     font-size: 0;
     width: 124px;
 }
 
-.uranai__global-navi {
+.request__global-navi {
     width: 80px;
     height: 80px;
     background-color: #ccc;
 }
 
 /* content */
-.uranai__content {
+.request__content {
     font-size: 14px;
     width: 100%;
     padding: 96px 16px 0 16px;
 }
 
 /* first view */
-.uranai__first-view {
+.request__first-view {
     width: 100%;
     font-size: 0;
     margin-bottom: 64px;
 }
 
-.uranai__first-view > img {
+.request__first-view > img {
     border-radius: 10px;
 }
 
-/* uranai__section */
-.uranai__section {
+/* request__section */
+.request__section {
     width: 100%;
     margin-bottom: 128px;
 }
 
-.uranai__section > .uranai__row {
+/* request__row */
+.request__row {
     width: 100%;
     margin-bottom: 64px;
 }
 
-.uranai__section > .uranai__row:last-of-type {
+.request__row:last-of-type {
     margin-bottom: 0px;
 }
 
-.uranai__section > .uranai__row > h2 {
-    text-align: center;
-}
-
-.uranai__section > .uranai__row > p {
-    font-size: 14px;
-    margin-bottom: 16px;
-}
-
-.uranai__section > .uranai__row > p:last-of-type {
-    margin-bottom: 0;
-}
-
-/* .uranai__uranai */
-.uranai__uranai {
-    width: 100%;
-    margin-bottom: 64px;
-}
-
-.uranai__uranai-box {
-    width: 100%;
-    margin-bottom: 64px;
-}
-
-.uranai__uranai-img {
-    width: 98px;
-    margin: 0 auto 16px auto;
-}
-
-.uranai__uranai-name {
-    text-align: center;
-    margin-bottom: 16px;
-}
-
-.uranai__uranai-description {
-    margin-bottom: 16px;
-}
-
-/* .uranai__link */
-.uranai__link {
-    display: inline-flex;
-    align-items: center;
-    margin: 0 auto;
-    padding: 8px 16px;
-    cursor: pointer;
-    border-bottom: 1px solid #707070;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.uranai__link-icon {
-    display: inline-block;
-    width: 20px;
-    margin-right: 16px;
-}
-
-.uranai__table {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-}
-
-.uranai__table > dt, .uranai__table > dd {
+.request__col {
     margin-bottom: 32px;
 }
 
-.uranai__table > dt {
-    width: 8em;
-
+.request__col:last-of-type {
+    margin-bottom: 0px;
 }
 
-.uranai__table > dd{
-    width: calc(100% - 8em);
-}
-
-
-/* uranai__contact-btn */
-.uranai__contact-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    padding: 16px;
-    background: #FAEDE7;
+/* voice box */
+.request__box {
+    display: block;
     border: 3px solid #535150;
-    transition: background-color .3s;
-    cursor: pointer;
+    padding: 16px;
+    margin-bottom: 16px;
 }
 
-.uranai__contact-btn:hover {
-    background: #EDDBD3;
+.request__box:last-of-type {
+    margin-bottom: 0;
 }
 
-.uranai__contact-icon{
-    display: inline-block;
-    width: 24px;
-    margin-right: 16px;
+.request__box-header {
+    width: 100%;
+    margin-bottom: 16px;
+}
+
+.request__box-header > h3 {
+    text-align: left;
+}
+
+.request__box-info {
+    width: 100%;
+    margin-bottom: 8px;
+}
+
+.request__box-info > li {
+    font-size: 12px;
+    margin-right: 8px;
+    display: inline;
+}
+
+.request__box-content > p {
+    margin-bottom: 8px;
+}
+
+.request__box-content > p:last-of-type {
+    margin-bottom: 0;
 }
 
 /* footer */
-.uranai__fotter {
+.request__fotter {
     width: 100%;
     padding: 64px 16px;
     border-top: 1px solid #ccc;
     font-size: 12px;
 }
 
-.uranai__fotter-navi {
+.request__fotter-navi {
     width: 100%;
     margin-bottom: 64px;
 }
 
-.uranai__fotter-navi > ul {
+.request__fotter-navi > ul {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
 }
 
-.uranai__fotter-navi > ul > li {
+.request__fotter-navi > ul > li {
     display: inline-block;
     width: 50%;
     margin-bottom: 16px;
 }
 
-.uranai__fotter-row {
+.request__fotter-row {
     width: 100%;
     display: flex;
     align-items: center;
@@ -228,26 +177,26 @@ body {
     margin-bottom: 64px;
 }
 
-.uranai__fotter-logo {
+.request__fotter-logo {
     display: inline-block;
     font-size: 0;
     width: 74.29px;
     border: 1px solid #ccc;
 }
 
-.uranai__fotter-sns {
+.request__fotter-sns {
     display: flex;
 }
 
-.uranai__fotter-sns-item {
+.request__fotter-sns-item {
     font-size: 0;
     width: 40px;
 }
 
-.uranai__fotter-sns-item {
+.request__fotter-sns-item {
     margin-right: 16px;
 }
 
-.uranai__fotter-sns-item:last-of-type {
+.request__fotter-sns-item:last-of-type {
     margin-right: 0;
 }
