--- a/wp-content/themes/uranai-lala/style.css
+++ b/wp-content/themes/uranai-lala/style.css
@@ -7,9 +7,15 @@ html, body, img { width: 100% }
 
 a, a:visited { text-decoration: none; color: #707070; }
 
-ul, li { list-style: none; }
-
 button { appearance: none; border: none; background: inherit; font-size: 100%; font-family: inherit; color: inherit; }
+
+h1, h2, h3 { text-align: center; }
+
+ul, ol, li { list-style: none; }
+
+p, li { font-size: 14px; margin-bottom: .8em; }
+
+p:last-of-type, li:last-of-type { margin-bottom: 0; }
 
 body { 
     color: #707070;
@@ -80,26 +86,23 @@ body {
     margin-bottom: 128px;
 }
 
-.index__section > .index__row {
+/* index__row */
+.index__row {
     width: 100%;
     margin-bottom: 64px;
 }
 
-.index__section > .index__row:last-of-type {
+.index__row:last-of-type {
     margin-bottom: 0px;
 }
 
-.index__section > .index__row  > h2 {
-    text-align: center;
+/* index__col */
+.index__col {
+    margin-bottom: 32px;
 }
 
-.index__section > .index__row > p {
-    font-size: 14px;
-    margin-bottom: 16px;
-}
-
-.index__section > .index__row > p:last-of-type {
-    margin-bottom: 0;
+.index__col:last-of-type {
+    margin-bottom: 0px;
 }
 
 /* .index__uranai */
@@ -134,6 +137,7 @@ body {
     margin-right: 16px;
 }
 
+/* .index__table */
 .index__table {
     display: flex;
     flex-wrap: wrap;
@@ -144,15 +148,17 @@ body {
     margin-bottom: 32px;
 }
 
+.index__table > dt:last-of-type, .index__table > dd:last-of-type {
+    margin-bottom: 0;
+}
+
 .index__table > dt {
     width: 8em;
-
 }
 
 .index__table > dd{
     width: calc(100% - 8em);
 }
-
 
 /* index__contact-btn */
 .index__contact-btn {
